--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
-name: Frigate Add-ons
+name: Frigate Add-ons - lkadar2015
 url: "https://github.com/lkadar2015/frigate-hassio-addons-lkadar2015"
 maintainer: lkadar2015
