--- a/frigate_fa_beta/config.yaml
+++ b/frigate_fa_beta/config.yaml
@@ -1,5 +1,5 @@
 name: Frigate (Full Access) Beta
-version: 0.17.0-beta1
+version: 0.17.0-beta1-lkadar2015
 breaking_versions:
   - 0.17.0-beta1
   - 0.16.0
@@ -9,8 +9,8 @@ panel_icon: "mdi:cctv"
 panel_title: Frigate
 slug: frigate-fa-beta
 description: NVR with realtime local object detection for IP cameras
-url: "https://github.com/blakeblackshear/frigate"
-image: ghcr.io/blakeblackshear/frigate
+url: "https://github.com/lkadar2015/frigate"
+image: ghcr.io/lkadar2015/frigate
 startup: application
 boot: auto
 init: false
